Update CMakeLists.txt and cleaned project directory

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,16 +1,11 @@
-cmake_minimum_required(VERSION 2.8)
-project(Engine)
+include_directories(include)
+
+set (
+    CMAKE_LIBRARY_OUTPUT_DIRECTORY
+		${CMAKE_SOURCE_DIR}
+)
 
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIRS})
-include_directories(include)
 
 add_subdirectory(src)
-
-add_library(
-
-  engine
-  SHARED
-  main.cc
-
-)
