--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,18 @@
-cmake_minimum_required (VERSION 2.8)
-project (Engine)
+cmake_minimum_required(VERSION 2.8)
+project(Engine)
 
-add_subdirectory (engine)
+# Options
+option(BUILD_SAMPLES "Build sample programs" OFF)
+
+# Library output directory
+set (
+	CMAKE_LIBRARY_OUTPUT_DIRECTORY
+	${CMAKE_BINARY_DIR}
+)
+
+# Subdirectories
+add_subdirectory(engine)
+
+if (BUILD_SAMPLES)
+	add_subdirectory(samples)
+endif (BUILD_SAMPLES)
