Update code architecture

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -1,5 +1,9 @@
+add_subdirectory(scene)
+
 add_library(Engine SHARED
 	engine.cpp
 )
+
+target_link_libraries(Engine Scene)
 
 target_include_directories(Engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
