--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "engine/src/utils/glm"]
-	path = engine/src/utils/glm
+[submodule "src/utils/glm"]
+	path = src/utils/glm
 	url = https://github.com/g-truc/glm.git
