Update CMakeLists to not generate subfolder libraries

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -1,11 +1,12 @@
+project(engine VERSION 0.1 LANGUAGES CXX)
+
+set(EngineSource engine.cpp)
+
 add_subdirectory(scene)
 add_subdirectory(components)
 
 add_library(Engine SHARED
-	engine.cpp
+	${EngineSource}
 )
-
-target_link_libraries(Engine Scene)
-target_link_libraries(Engine Components)
 
 target_include_directories(Engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
