--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 project(Engine)
 
 # Options
@@ -7,11 +7,10 @@ option(BUILD_SAMPLES "Build sample programs" OFF)
 # C++14
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
-# Library output directory
-set (
-	CMAKE_LIBRARY_OUTPUT_DIRECTORY
-	${CMAKE_BINARY_DIR}
-)
+# Output directories
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/samples)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/samples)
 
 # Subdirectories
 add_subdirectory(src)
