--- a/src/engine/components/CMakeLists.txt
+++ b/src/engine/components/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(Components STATIC
-  component.cpp
-  transform.cpp
-)
+set(EngineSource ${EngineSource}
+        ${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/transform.cpp
+        PARENT_SCOPE)
