--- a/src/engine/scene/CMakeLists.txt
+++ b/src/engine/scene/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(Scene STATIC
-	node.cpp
-)
+set(EngineSource ${EngineSource}
+        ${CMAKE_CURRENT_SOURCE_DIR}/node.cpp
+        PARENT_SCOPE)
