Fix Triangle not compiling because the parent constructor call was made outside the initialization list

--- a/src/engine/components/geometry/CMakeLists.txt
+++ b/src/engine/components/geometry/CMakeLists.txt
@@ -1,3 +1,4 @@
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/geometry.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/triangle.cpp
         PARENT_SCOPE)
