Update test suite build system, now simply requiring 'make check' to build and launch tests

--- a/samples/triangle/CMakeLists.txt
+++ b/samples/triangle/CMakeLists.txt
@@ -1,8 +1,10 @@
-add_executable(Triangle
+set(SAMPLE_LIST ${SAMPLE_LIST} triangle PARENT_SCOPE)
+
+add_executable(triangle
   main.cpp
 )
 
-target_link_libraries(Triangle LINK_PUBLIC
-  Engine
+target_link_libraries(triangle LINK_PUBLIC
+  engine
   GLEW glfw3 GL X11 Xi Xrandr Xxf86vm Xinerama Xcursor rt m pthread dl
 )
