Move every components into their own folders

--- a/src/engine/components/CMakeLists.txt
+++ b/src/engine/components/CMakeLists.txt
@@ -1,4 +1,7 @@
+add_subdirectory(geometry)
+add_subdirectory(renderer)
+add_subdirectory(transform)
+
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/transform.cpp
         PARENT_SCOPE)
