Fix camera.cpp and perspective-camera.cpp not being built

--- a/src/engine/components/CMakeLists.txt
+++ b/src/engine/components/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(geometry)
 add_subdirectory(renderer)
 add_subdirectory(transform)
+add_subdirectory(camera)
 
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
