--- a/src/engine/components/camera/CMakeLists.txt
+++ b/src/engine/components/camera/CMakeLists.txt
@@ -1,3 +1,4 @@
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/perspective-camera.cpp
         PARENT_SCOPE)
