Add quad geometry Add indices to triangle/quad

--- a/src/engine/components/geometry/CMakeLists.txt
+++ b/src/engine/components/geometry/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/geometry.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/triangle.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/quad.cpp
         PARENT_SCOPE)
