Add a material component (hardcoded for now) Add rendering of child nodes in Renderer

--- a/src/engine/components/CMakeLists.txt
+++ b/src/engine/components/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(camera)
 add_subdirectory(geometry)
 add_subdirectory(transform)
+add_subdirectory(material)
 add_subdirectory(renderer)
 
 set(EngineSource ${EngineSource}
