Add Cube geometry

--- a/src/engine/components/geometry/CMakeLists.txt
+++ b/src/engine/components/geometry/CMakeLists.txt
@@ -2,4 +2,5 @@ set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/geometry.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/triangle.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/quad.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/cube.cpp
         PARENT_SCOPE)
