Add the doc/ folder containg the documentation generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,10 @@ project(Engine)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 
 # Output directories
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/samples)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/samples)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/bin/samples)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/bin/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/bin/samples)
+set(CMAKE_DOC_OUTPUT_DIRECTORY      ${CMAKE_BINARY_DIR}/doc)
 
 # Add the engine and samples directories
 add_subdirectory(src)
@@ -15,3 +16,6 @@ add_subdirectory(samples)
 
 # Add the test suite subdirectory
 add_subdirectory(tests)
+
+# Add the doc subdirectory
+add_subdirectory(doc)
