Remove Shader instanciation from the Material, replacing it by a simple pointer to the Shader

--- a/src/engine/components/CMakeLists.txt
+++ b/src/engine/components/CMakeLists.txt
@@ -6,4 +6,5 @@ add_subdirectory(renderer)
 
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/component-factory.cpp
         PARENT_SCOPE)
