--- a/src/engine/data/CMakeLists.txt
+++ b/src/engine/data/CMakeLists.txt
@@ -1,3 +1,4 @@
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/data-container.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/store.cpp
         PARENT_SCOPE)
