Add deferred rendering technique with basic spotlight lightning

--- a/src/engine/components/CMakeLists.txt
+++ b/src/engine/components/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_subdirectory(camera)
 add_subdirectory(geometry)
-add_subdirectory(transform)
+add_subdirectory(light)
 add_subdirectory(material)
 add_subdirectory(renderer)
+add_subdirectory(transform)
 
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/component.cpp
