--- a/src/engine/shaders/nodes/CMakeLists.txt
+++ b/src/engine/shaders/nodes/CMakeLists.txt
@@ -2,5 +2,6 @@ set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/variable-shader-node.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/inline-shader-node.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/call-shader-node.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/uniform-shader-node.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/shader-node.cpp
         PARENT_SCOPE)
