--- a/src/engine/shaders/nodes/CMakeLists.txt
+++ b/src/engine/shaders/nodes/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(EngineSource ${EngineSource}
-        ${CMAKE_CURRENT_SOURCE_DIR}/variable-shader-node.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/inline-shader-node.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/call-shader-node.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/uniform-shader-node.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/variable-node.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/inline-node.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/call-node.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/uniform-node.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/operation-node.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/shader-node.cpp
         PARENT_SCOPE)
