Modifies GBuffer by making it PBR compliant

--- a/src/engine/rendering/CMakeLists.txt
+++ b/src/engine/rendering/CMakeLists.txt
@@ -1,3 +1,5 @@
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/gbuffer.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/render-target.cpp
         PARENT_SCOPE)
