Add basic Shader/Material system handling texture and cubemap

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -3,3 +3,9 @@ add_subdirectory(camera-fps)
 
 add_custom_target(samples
         DEPENDS ${SAMPLE_LIST})
+
+# Copies the asset folder in the build folder
+add_custom_command(TARGET samples POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/samples/assets
+        ${CMAKE_BINARY_DIR}/bin/samples/assets/)
