--- a/src/engine/components/material/CMakeLists.txt
+++ b/src/engine/components/material/CMakeLists.txt
@@ -1,3 +1,5 @@
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/material.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/material-pbr.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/material-skybox.cpp
         PARENT_SCOPE)
