--- a/src/engine/rendering/CMakeLists.txt
+++ b/src/engine/rendering/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(EngineSource ${EngineSource}
         ${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/gbuffer.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/render-target.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/texture.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/texture-2d.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/texture-cubemap.cpp
         PARENT_SCOPE)
