samples: add asset folder

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -7,5 +7,5 @@ add_custom_target(samples
 # Copies the asset folder in the build folder
 add_custom_command(TARGET samples POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_SOURCE_DIR}/samples/assets
-        ${CMAKE_BINARY_DIR}/bin/samples/assets/)
+        ${CMAKE_SOURCE_DIR}/samples/asset
+        ${CMAKE_BINARY_DIR}/bin/samples/asset/)
